--- a/src/components/index.css
+++ b/src/components/index.css
@@ -66,3 +66,5 @@
 @import url(../blocks/popup-image/__image/popup-image__image.css);
 @import url(../blocks/popup-image/__text/popup-image__text.css);
 @import url(../blocks/popup-image/__body/popup-image__body.css);
+/* Login */
+@import url(../blocks/login/login.css);
