--- a/src/components/index.css
+++ b/src/components/index.css
@@ -13,6 +13,9 @@
 /* Header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__wrapper/header__wrapper.css);
+@import url(../blocks/header/__button/header__button.css);
+@import url(../blocks/header/__email/header__email.css);
 
 /* Main */
 @import url(../blocks/main/main.css);
@@ -50,21 +53,30 @@
 /* Popup */
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__body/popup__body.css);
-@import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__submit-button/popup__submit-button.css);
-@import url(../blocks/popup/__submit-button/_disabled/popup__submit-button_disabled.css);
 @import url(../blocks/popup/__header/popup__header.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
-@import url(../blocks/popup/__input/popup__input.css);
-@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
-@import url(../blocks/popup/__input/-error/popup__input-error.css);
-@import url(../blocks/popup/__input/-error/_active/popup__input-error-active.css);
-@import url(../blocks/popup/__label/popup__label.css);
+
 /* Popup-Image */
 @import url(../blocks/popup-image/popup-image.css);
 @import url(../blocks/popup-image/__image/popup-image__image.css);
 @import url(../blocks/popup-image/__text/popup-image__text.css);
 @import url(../blocks/popup-image/__body/popup-image__body.css);
+
 /* Login */
-@import url(../blocks/login/login.css);
+@import url(../blocks/signpage/signpage.css);
+@import url(../blocks/signpage/__header/signpage__header.css);
+@import url(../blocks/signpage/__question/signpage__question.css);
+@import url(../blocks/signpage/__link/signpage__link.css);
+
+/* FORM */
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__submit-button/_disabled/form__submit-button_disabled.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__input/_type_error/form__input_type_error.css);
+@import url(../blocks/form/__input/-error/form__input-error.css);
+@import url(../blocks/form/__input/-error/_active/form__input-error-active.css);
+@import url(../blocks/form/__label/form__label.css);
+@import url(../blocks/form/__input/-dark/form__input-dark.css);
+@import url(../blocks/form/__submit-button/-dark/form__submit-button-dark.css);
