--- a/src/blocks/form/__input/form__input.css
+++ b/src/blocks/form/__input/form__input.css
@@ -1,4 +1,4 @@
-.popup__input {
+.form__input {
   width: 100%;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -19,7 +19,7 @@
 } */
 
 @media (max-width: 641px) {
-  .popup__input:last-of-type {
+  .form__input:last-of-type {
     margin: 0 0 0px 0;
   }
 }
