--- a/src/blocks/form/__submit-button/form__submit-button.css
+++ b/src/blocks/form/__submit-button/form__submit-button.css
@@ -1,4 +1,4 @@
-.popup__submit-button {
+.form__submit-button {
   display: block;
   color: white;
   background-color: rgb(0, 0, 0);
@@ -14,12 +14,12 @@
   line-height: calc(22 / 18);
 }
 
-.popup__submit-button:hover {
+.form__submit-button:hover {
   background-color: rgb(0, 0, 0, 0.8);
 }
 
 @media (max-width: 641px) {
-  .popup__submit-button {
+  .form__submit-button {
     padding: 16px 81px 16px 79px;
     /* font */
     font-size: 14px;
