--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,8 @@
   width: 68.7%;
   padding-top: 45px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  justify-content: space-between;
 }
 
 @media (max-width: 450px) {
