--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
   max-width: 1280px;
+  min-height: 100%;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
